cf_analysis_results/checkerframework_results/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8.txt
../../../../datasets/june2020_dataset/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/resources/DB3DProperties.java:76: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-23 $$ java.io.FileInputStream $$ regular method exit $$ ( 1972, 2007 ) $$ @MustCall method close may not have been invoked on temp-var-23 or any of its aliases.
				db3dProperties.load(new FileInputStream(propertiesFile));
				                    ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/resources/DB3DProperties.java:95: error: (required.method.not.called) $$ 4 $$ method close $$ fw $$ java.io.FileOutputStream $$ possible exceptional exit due to db3dProperties.store(fw, comments) with exception type java.io.IOException $$ ( 2463, 2522 ) $$ @MustCall method close may not have been invoked on fw or any of its aliases.
				FileOutputStream fw = new FileOutputStream(propertiesFile);
				                 ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to db3dProperties.store(fw, comments) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/model3d/TetrahedronNet3DComp.java:1742: error: (required.method.not.called) $$ 4 $$ method close $$ os $$ java.io.ObjectOutputStream $$ possible exceptional exit due to os.writeObject(this) with exception type java.io.IOException $$ ( 59354, 59406 ) $$ @MustCall method close may not have been invoked on os or any of its aliases.
			ObjectOutputStream os = new ObjectOutputStream(out);
			                   ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope: possible exceptional exit due to os.writeObject(this) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/model3d/TetrahedronNet3DComp.java:1745: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.ObjectInputStream $$ possible exceptional exit due to is.readObject() with exception type java.io.IOException $$ ( 59450, 59546 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
			ObjectInputStream is = new ObjectInputStream(
			                  ^
  The type of object is: java.io.ObjectInputStream.
  Reason for going out of scope: possible exceptional exit due to is.readObject() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/model3d/TriangleNet3DComp.java:997: error: (required.method.not.called) $$ 4 $$ method close $$ os $$ java.io.ObjectOutputStream $$ possible exceptional exit due to os.writeObject(this) with exception type java.io.IOException $$ ( 31402, 31454 ) $$ @MustCall method close may not have been invoked on os or any of its aliases.
			ObjectOutputStream os = new ObjectOutputStream(out);
			                   ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope: possible exceptional exit due to os.writeObject(this) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/model3d/TriangleNet3DComp.java:1000: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.ObjectInputStream $$ possible exceptional exit due to is.readObject() with exception type java.io.IOException $$ ( 31498, 31594 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
			ObjectInputStream is = new ObjectInputStream(
			                  ^
  The type of object is: java.io.ObjectInputStream.
  Reason for going out of scope: possible exceptional exit due to is.readObject() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/model3d/SegmentNet3DComp.java:989: error: (required.method.not.called) $$ 4 $$ method close $$ os $$ java.io.ObjectOutputStream $$ possible exceptional exit due to os.writeObject(this) with exception type java.io.IOException $$ ( 29799, 29851 ) $$ @MustCall method close may not have been invoked on os or any of its aliases.
			ObjectOutputStream os = new ObjectOutputStream(out);
			                   ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope: possible exceptional exit due to os.writeObject(this) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/model3d/SegmentNet3DComp.java:992: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.ObjectInputStream $$ possible exceptional exit due to is.readObject() with exception type java.io.IOException $$ ( 29895, 29991 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
			ObjectInputStream is = new ObjectInputStream(
			                  ^
  The type of object is: java.io.ObjectInputStream.
  Reason for going out of scope: possible exceptional exit due to is.readObject() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/model3d/PointNet3DComp.java:336: error: (required.method.not.called) $$ 4 $$ method close $$ os $$ java.io.ObjectOutputStream $$ possible exceptional exit due to os.writeObject(this) with exception type java.io.IOException $$ ( 8978, 9030 ) $$ @MustCall method close may not have been invoked on os or any of its aliases.
			ObjectOutputStream os = new ObjectOutputStream(out);
			                   ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope: possible exceptional exit due to os.writeObject(this) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/model3d/PointNet3DComp.java:339: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.ObjectInputStream $$ possible exceptional exit due to is.readObject() with exception type java.io.IOException $$ ( 9074, 9170 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
			ObjectInputStream is = new ObjectInputStream(
			                  ^
  The type of object is: java.io.ObjectInputStream.
  Reason for going out of scope: possible exceptional exit due to is.readObject() with exception type java.io.IOException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
